@@ -1,3 +1,9 @@
+drkns 29.06.2016 09:41:59 +0200 - build 4729
+
+1. 'Защита' от вложенных вызовов FCTL_<G|S>ETUSERSCREEN.
+
+2. Пара мелочей.
+
 drkns 27.06.2016 22:43:25 +0200 - build 4728
 
 1. Продолжение экспериментальных изменений в запускателе.
